[metadata]
name = gloss
version = 1.2.2
author = Jeremiah Paige
author_email = ucodery@gmail.com
description = A synchronous one-to-one mapping type
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
url = https://github.com/ucodery/gloss
keywords =
    dict
    map
    mapping
    collection
    gloss
    glossary
    translation
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3
zip_safe = no

[options.extras_require]
dev = tox

[options.package_data]
gloss = py.typed
